--- a/src/main/abnormalMonitoring/style.scss
+++ b/src/main/abnormalMonitoring/style.scss
@@ -5,3 +5,16 @@
     }
   }
 }
+.addedMapping, .developmentAbnormal {
+  .content-title {
+    line-height: 64px;
+    height: 64px;
+    font-size: 16px;
+    color: #293038;
+    font-weight: bold;
+    border-bottom: 1px solid #EDEFF3;
+    padding: 0 20px;
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+}
