--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ fieldset, img { border:0; }
 button, input, select, textarea { font-size:100%; }
 table { border-collapse:collapse; border-spacing:0; }
 p {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 
 code {
