--- a/src/main/abnormalMonitoring/components/style.scss
+++ b/src/main/abnormalMonitoring/components/style.scss
@@ -1,30 +1,27 @@
 .abnormal-monitoring-top-select {
-  height: 80px;
-  line-height: 80px;
-  width: calc(100% + 80px);
-  border-bottom: 20px solid #EDEFF3;
-  margin: -20px 0 20px -40px;
-  background: white;
-  box-sizing: content-box;
-  padding: 0 20px;
+  padding: 20px 0;
   .iconshujuleixing {
-    font-size: 24px;
+    font-size: 20px;
     color: #FD9C26;
+    font-weight: normal;
+    margin-right: 10px;
   }
   .label {
     font-size: 18px;
     color: #000000;
     font-weight: bold;
-    margin: 0 10px;
   }
   .ant-select {
-    width: 240px;
+    width: auto;
+    margin-left: 30px;
     .ant-select-selector {
       height: 40px;
+      border: none;
       box-shadow: none !important;
       line-height: 40px;
       .ant-select-selection-item {
         line-height: 39px;
+        padding-right: 32px;
       }
     }
     height: 40px;
@@ -32,11 +29,11 @@
     font-weight: bold;
     color: #000000;
   }
-  .ant-select-focused {
-    .ant-select-selector {
-      border: 1px solid #0E68C2 !important;
-    }
-  }
+  //.ant-select-focused {
+  //  .ant-select-selector {
+  //    border: 1px solid #0E68C2 !important;
+  //  }
+  //}
   .ant-select:hover {
     .ant-select-selector {
       border-color: #0E68C2;
