--- a/src/router/style.scss
+++ b/src/router/style.scss
@@ -1,6 +1,6 @@
 .yc-main-side {
   float: left;
-  width: 300px;
+  width: 190px;
   height: calc(100% - 50px);
   .ant-menu.ant-menu-dark.ant-menu-root.ant-menu-inline {
     height: 100%;
@@ -19,7 +19,8 @@
   float: right;
   margin: 20px;
   padding: 0 20px;
-  width: calc(100% - 340px);
-  min-height: calc(100% - 90px);
+  width: calc(100% - 230px);
+  height: calc(100% - 90px);
   background: #fff;
+  overflow: auto;
 }
