--- a/src/assets/css/public.scss
+++ b/src/assets/css/public.scss
@@ -1,1 +1,41 @@
-$bace-color: #016AA9
+.App {
+  .header-title {
+    border-bottom: 1px solid #EDEFF3;
+    height: 54px;
+    color: #293038;
+    font-size: 14px;
+    line-height: 54px;
+    font-weight: bold;
+    padding-left: 20px;
+    position: relative;
+    .title-right {
+      position: absolute;
+      right: 0;
+      top: 10px;
+      line-height: 32px;
+      .yc-search-line {
+        display: inline-block;
+      }
+    }
+  }
+  .second-title {
+    font-size: 14px;
+    font-weight: bold;
+    color: #293038;
+    line-height: 16px;
+    padding-left: 8px;
+    margin: 20px 0;
+    border-left: 3px solid #016AA9;
+    position: relative;
+    .title-right {
+      position: absolute;
+      right: 0;
+      top: 10px;
+      line-height: 32px;
+      .yc-search-line {
+        display: inline-block;
+      }
+    }
+  }
+}
+
