--- a/src/main/judicialAuction/style.scss
+++ b/src/main/judicialAuction/style.scss
@@ -1,26 +1,7 @@
 .grab-situation-monitor {
   background: #EDEFF3;
   margin: 0 -20px;
-  height: 100%;
-  .header-title {
-    border-bottom: 1px solid #EDEFF3;
-    height: 54px;
-    color: #293038;
-    font-size: 14px;
-    line-height: 54px;
-    font-weight: bold;
-    padding-left: 20px;
-    position: relative;
-    .title-right {
-      position: absolute;
-      right: 0;
-      top: 10px;
-      line-height: 32px;
-      .yc-search-line {
-
-      }
-    }
-  }
+  min-height: 100%;
   .header {
     margin-bottom: 16px;
     padding-bottom: 22px;
@@ -76,5 +57,24 @@
       width: 100%;
       margin: 30px 0;
     }
+  }
+}
+.otherIndicator {
+  background: #EDEFF3;
+  margin: 0 -20px;
+  min-height: 100%;
+  .header-title {
+    line-height: 57px;
+    height: 57px;
+  }
+  .left-wrapper {
+    display: inline-block;
+    width: calc(50% - 8px);
+    margin-right: 16px;
+  }
+  .right-wrapper {
+    display: inline-block;
+    width: calc(50% - 8px);
+    vertical-align: top;
   }
 }
