--- a/src/main/login/style.scss
+++ b/src/main/login/style.scss
@@ -60,6 +60,10 @@
     text-align: center;
     height: 14.2%;
     .bottom-content-wrapper {
+      .icondaohang-logo {
+        vertical-align: middle;
+        margin-right: 2px;
+      }
       > p:first-child {
         margin-bottom: 20px;
       }
