--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -16,12 +16,15 @@
   }
   .header-user-name {
     float: right;
-    width: 122px;
     background: #017AC2;
     padding: 0 20px;
     height: 50px;
+    cursor: pointer;
     .anticon {
       font-size: 8px;
+    }
+    .ant-dropdown-trigger {
+      height: 50px;
     }
   }
 }
