--- a/src/main/judicialAuction/components/style.scss
+++ b/src/main/judicialAuction/components/style.scss
@@ -3,6 +3,11 @@
   right: 0;
   top: 10px;
   line-height: 32px;
+  font-weight: normal;
+  .ant-radio-button-wrapper {
+    color: #293038;
+  }
+  color: #293038;
   .yc-search-line {
     display: inline-block;
   }
