--- a/src/main/abnormalMonitoring/components/style.scss
+++ b/src/main/abnormalMonitoring/components/style.scss
@@ -7,9 +7,8 @@
     margin-right: 10px;
   }
   .label {
-    font-size: 18px;
-    color: #000000;
-    font-weight: bold;
+    font-size: 16px;
+    color: #4E5566;
   }
   .ant-select {
     width: auto;
@@ -29,6 +28,13 @@
     font-weight: bold;
     color: #000000;
   }
+  .ant-select {
+    margin-top: 5px !important;
+    .ant-select-selector {
+      padding-left: 0 !important;
+    }
+  }
+
   //.ant-select-focused {
   //  .ant-select-selector {
   //    border: 1px solid #0E68C2 !important;
