--- a/src/main/judicialAuction/style.scss
+++ b/src/main/judicialAuction/style.scss
@@ -40,6 +40,7 @@
     box-sizing: border-box;
     margin-right: 16px;
     background: #ffffff;
+    vertical-align: top;
     .chart {
       padding-right: 20px;
       width: 100%;
@@ -76,5 +77,8 @@
     display: inline-block;
     width: calc(50% - 8px);
     vertical-align: top;
+  }
+  .second-title .title-right {
+    font-weight: normal;
   }
 }
