--- a/src/router/style.scss
+++ b/src/router/style.scss
@@ -1,5 +1,6 @@
 .yc-main-side {
-  float: left;
+  position: fixed;
+  top: 50px;
   width: 190px;
   height: calc(100% - 50px);
   .ant-menu.ant-menu-dark.ant-menu-root.ant-menu-inline {
@@ -16,11 +17,8 @@
   }
 }
 .yc-content {
-  float: right;
-  margin: 20px;
+  margin: 70px 0 20px 210px ;
   padding: 0 20px;
   width: calc(100% - 230px);
-  height: calc(100% - 90px);
   background: #fff;
-  overflow: auto;
 }
