-feat 修改代理配置

--- a/src/main/judicialAuction/otherIndicator/left-wrapper/style.scss
+++ b/src/main/judicialAuction/otherIndicator/left-wrapper/style.scss
@@ -4,6 +4,7 @@
     padding: 0 20px;
     .first-content,.second-content {
       padding-bottom: 14px;
+      height: 119px;
       border-bottom: 1px solid #EDEFF3;
       .content {
         text-align: center;
