--- a/src/assets/css/public.scss
+++ b/src/assets/css/public.scss
@@ -59,7 +59,7 @@
       color: #016AA9;
       border-color: #016AA9;
     }
-    .ant-btn-ghost:hover {
+    .ant-btn-ghost:hover.ant-btn-ghost:focus, .ant-btn-ghost:hover {
       background-color: #016AA9;
       border-color: #016AA9;
       color: white;
