--- a/src/main/judicialAuction/otherIndicator/left-wrapper/style.scss
+++ b/src/main/judicialAuction/otherIndicator/left-wrapper/style.scss
@@ -8,9 +8,15 @@
       border-bottom: 1px solid #EDEFF3;
       .content {
         text-align: center;
-        .content-left, .content-right {
-          display: inline-block;
+        .content-left {
+          text-align: right;
+        }
+        .content-right {
           text-align: left;
+        }
+        .content-left, .content-right {
+          vertical-align: top;
+          display: inline-block;
           .label {
             color: #7D8699;
           }
@@ -26,6 +32,7 @@
         .content-center {
           display: inline-block;
           margin: 0 30px;
+          font-size: 12px;
           .border-bottom {
             width: 130px;
             height: 8px;
