--- a/src/components/modal/style.scss
+++ b/src/components/modal/style.scss
@@ -1,4 +1,7 @@
 .ant-modal {
+  .ant-modal-body {
+    padding: 30px 30px 40px 30px;
+  }
   .ant-modal-footer {
     padding: 20px;
     .ant-btn {
