--- a/src/components/modal/style.scss
+++ b/src/components/modal/style.scss
@@ -4,8 +4,18 @@
   }
   .ant-modal-footer {
     padding: 20px;
+    button + button {
+      margin-left: 20px;
+    }
     .ant-btn {
-      padding: 0 30px;
+      padding: 0 28.1px;
+    }
+    .cancel-btn:hover {
+      color: #016AA9;
+      border-color: #016AA9;
+    }
+    .cancel-btn {
+      color: #293038;
     }
   }
 }
