--- a/src/main/abnormal-monitoring/components/style.scss
+++ b/src/main/abnormal-monitoring/components/style.scss
@@ -1,5 +1,5 @@
 .abnormal-monitoring-top-select {
-  padding: 20px 0;
+  padding: 20px 0 12px 0;
   .iconshujuleixing {
     font-size: 20px;
     color: #FD9C26;
@@ -58,6 +58,7 @@
       position: absolute;
       right: 10px;
       bottom: 10px;
+      font-size: 12px;
     }
   }
 }
