--- a/src/main/judicialAuction/style.scss
+++ b/src/main/judicialAuction/style.scss
@@ -2,6 +2,9 @@
   background: #EDEFF3;
   margin: 0 -20px;
   min-height: 100%;
+  .ant-select {
+    color: #293038;
+  }
   .header {
     margin-bottom: 16px;
     padding-bottom: 22px;
@@ -13,7 +16,7 @@
         color: #7D8699;
       }
       .left {
-        width: 410px;
+        width: 350px;
         text-align: center;
         display: inline-block;
         .bottom {
@@ -64,9 +67,13 @@
   background: #EDEFF3;
   margin: 0 -20px;
   min-height: 100%;
+  .ant-select {
+    color: #293038;
+  }
   .header-title {
     line-height: 57px;
     height: 57px;
+    font-size: 16px;
   }
   .left-wrapper {
     display: inline-block;
