--- a/src/router/style.scss
+++ b/src/router/style.scss
@@ -7,13 +7,13 @@
     height: 100%;
   }
   .ant-menu.ant-menu-dark {
-    background: #37424F;
+    background: #001529;
     .ant-menu-inline.ant-menu-sub {
-      background: #293038;
+      background: #000C17;
     }
   }
   .ant-menu-dark.ant-menu-dark:not(.ant-menu-horizontal) .ant-menu-item-selected {
-    background: #016AA9;
+    background: #0286D5;
   }
 }
 .yc-content {
