--- a/src/main/abnormal-monitoring/components/style.scss
+++ b/src/main/abnormal-monitoring/components/style.scss
@@ -44,6 +44,9 @@
     .ant-select-selector {
       border-color: #0E68C2;
     }
+    .ant-select-arrow {
+      color: #7D8699;
+    }
   }
   .ant-select-dropdown {
     min-width: 180px !important;
