--- a/src/main/login/style.scss
+++ b/src/main/login/style.scss
@@ -7,7 +7,6 @@
     position: relative;
     .login-header-logo {
       margin-left: 24%;
-      height: 48px;
       width: 256px;
       position: absolute;
       top: calc(50% - 24px);
@@ -42,11 +41,21 @@
       }
       .ant-input-affix-wrapper {
         height: 44px;
+        .iconfont {
+          color: #7D8699;
+        }
+        .ant-input-prefix {
+          margin-right: 20px;
+        }
       }
       .login-form-button {
         width: 100%;
         background: #0E68C2;
         height: 44px;
+        font-size: 16px;
+      }
+      .login-form-button:hover {
+        background: #0C5AA8;
       }
       .ant-form-item-has-error{
         .ant-input-affix-wrapper {
@@ -67,13 +76,14 @@
   .login-bottom {
     text-align: center;
     height: 14.2%;
+    color: #7D8699;
     .bottom-content-wrapper {
       .icondaohang-logo {
         vertical-align: middle;
         margin-right: 2px;
       }
       > p:first-child {
-        margin-bottom: 20px;
+        margin-bottom: 12px;
       }
       vertical-align: middle;
       display: inline-block;
