-fix 修复抓取指标监控源网站增量与数据抓取量 tooltip bug

--- a/src/main/judicialAuction/style.scss
+++ b/src/main/judicialAuction/style.scss
@@ -19,8 +19,18 @@
         width: 350px;
         text-align: center;
         display: inline-block;
+        position: relative;
         .bottom {
           text-align: left;
+        }
+        .cover-wrapper {
+          position: absolute;
+          bottom: -200px;
+          height: 180px;
+          width: 180px;
+          background: white;
+          left: 80px;
+          z-index: 1;
         }
       }
       .right {
