--- a/src/main/judicialAuction/otherIndicator/left-wrapper/style.scss
+++ b/src/main/judicialAuction/otherIndicator/left-wrapper/style.scss
@@ -33,6 +33,10 @@
           display: inline-block;
           margin: 0 30px;
           font-size: 12px;
+          .ratio {
+            display: inline-block;
+            height: 16px;
+          }
           .border-bottom {
             width: 130px;
             height: 8px;
