--- a/src/assets/css/public.scss
+++ b/src/assets/css/public.scss
@@ -46,6 +46,9 @@
           padding: 15px 16px;
           line-height: 15px;
         }
+        .ant-table-column-sorters {
+          padding: 0;
+        }
         //.ant-table-tbody > tr{
         //  > td {
         //    padding: 20px;
