-feat 添加下拉超出省略提示

--- a/src/components/table-with-search/search/style.scss
+++ b/src/components/table-with-search/search/style.scss
@@ -36,6 +36,9 @@
       .ant-select-selector {
         width: 171px;
         height: 30px;
+        .ant-select-selection-item > span {
+          display: inline !important;
+        }
       }
     }
   }
