--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -1,3 +1,11 @@
 @import "reset.less";
 @import "yc.less";
 @import "antd.less";
+
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
